--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 
 li {
-    background: #ddd;
-    border: 1px solid #ddd;
+    background: rgb(218, 203, 203);
+    border: 3px solid gold;
     padding: 5px;
     margin: 5px;
     width: 200px;
-  list-style-type: none;
+  list-style-type:none;
+  display: inline-block;
+  border-radius: 20px;
   }
   
   .menu li {
@@ -18,7 +20,7 @@ li {
   }
 
   @import url(https://fonts.googleapis.com/css?family=Rubik+One&subset=latin,cyrillic);
-  gradient-text{
+  h3{
     font-family: 'Rubik One', sans-serif;
     font-size: 50px;
     text-transform: uppercase;
@@ -31,6 +33,7 @@ li {
   }
 footer{
     background-color: rgb(21, 90, 90);
+    color: white;
 } 
 .menuu{
     background: rgb(46, 87, 165);
@@ -62,7 +65,15 @@ footer{
   body{
     background-color: #8AA9D6;
   }
-  h3{
+  h4{
     background-color: lightcyan;
-    color:lightcoral
+    color:rgb(219, 54, 54);
+    border:2px solid blue;
+  }
+  Ul{
+    background-color: #0D61BC;
+    border-radius: 30px;
+  }
+  footer li{
+    color:black;
   }
